components/go-analysis/fixtures/bad/tidy/tidy.go
// Package tidy supplies the stale-module-metadata fixture.
package tidy

// Value is arbitrary fixture data.
const Value = 1
